stripped motionemotion demo successfully

--- a/dynamic_arp.html
+++ b/dynamic_arp.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="js/Tone.js/build/Tone.min.js"></script>
+    <script src="js/Tone.js"></script>
     <script type="text/javascript" src="js/dynamic_arp.js"></script>
     <title>
     </title>
