--- a/dynamic_arp.html
+++ b/dynamic_arp.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script src="js/Tone.js"></script>
+    <script src="https://parse.com/downloads/javascript/parse-1.3.5.min.js"></script>
     <script type="text/javascript" src="js/dynamic_arp.js"></script>
     <title>
     </title>
