--- a/dynamic_arp.html
+++ b/dynamic_arp.html
@@ -2,6 +2,7 @@
 <head>
     <script src="js/Tone.js"></script>
     <script src="https://parse.com/downloads/javascript/parse-1.3.5.min.js"></script>
+    <script src="js/gauss.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="js/dynamic_arp.js"></script>
     <title>
     </title>
