--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
     <head>
+        <script src="https://parse.com/downloads/javascript/parse-1.3.5.min.js"></script>
         <script src="js/three.min.js"></script>
 		<script src="js/threex.grass.js"></script>
+
+        <script src="js/Tone.js"></script>
+        <script src="js/gauss.min.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/dynamic_arp.js"></script>
     </head>
     <body style='margin: 0px; overflow: hidden;'>
     	<script src="js/DMN_Audio.js"></script>
